Bug: 없는 사용자 초대에 대한 Alert 처리 및 에러 코드에 맞게 Alert 출력